hphp/hack/test/typecheck/readonly/nested_prop.php.exp
File "nested_prop.php", line 18, characters 3-9:
This value is readonly, its properties cannot be modified (Typing[4409])
